# podman-haskell

./: .gitignore  .gitreview  .zuul.yaml  CHANGELOG.md  Makefile  README.md  cabal.project  default.nix  groups  podman-haskell.cabal  podman.cabal  project.config
app/: Main.hs
podman-codegen/: Codegen.hs  Main.hs  podman-codegen.cabal
podman-demo/: Demo.hs  podman-demo.cabal
podman-quickcheck/: QuickCheck.hs  cabal.project  podman-quickcheck.cabal
src/: Podman.hs  PodmanHaskell.hs
src/Podman/: Api.hs  Client.hs  Codegen.hs  Internal.hs  Tutorial.hs  Types.hs
test/: Spec.hs
test/data/: Container.json  pull.raw  version.json
