cabal-version:       2.4
name:                podman
version:             0.1.0.0
synopsis:            A podman remote client library
description:
    Podman is a client library to interface with https://podman.io/
    .
homepage:            https://github.com/softwarefactory-project/podman-haskell#readme
bug-reports:         https://github.com/softwarefactory-project/podman-haskell/issues
license:             Apache-2.0
license-file:        LICENSE
author:              Tristan de Cacqueray
maintainer:          tdecacqu@redhat.com
copyright:           2021 Red Hat
category:            System
build-type:          Simple
extra-doc-files:     CHANGELOG.md
                     README.md
extra-source-files:  test/data/*.json
tested-with:         GHC == 8.10.3

source-repository head
  type:                git
  location:            https://github.com/softwarefactory-project/podman-haskell.git

common common-options
  build-depends:       base                   < 5
                     , aeson                  >= 1.0.0.0  && < 1.6
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wunused-imports
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010

library
  import:              common-options
  build-depends:       aeson-casing           < 0.3
                     , http-client            >= 0.5.0    && < 0.8
                     , http-client-tls        >= 0.2.0    && < 0.4
                     , text                   >= 0.11.1.0 && < 1.3
                     , network                < 4
  hs-source-dirs:      src
  exposed-modules:     Podman
                     , Podman.Types

test-suite podman-haskell-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       podman
                     , tasty                  >= 0.11.2   && < 1.5
                     , tasty-hunit            >= 0.10     && < 0.11
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
