cabal-version:       2.4
name:                podman
version:             0.1.0.0
synopsis:            A podman remote client library
description:
    Podman is a client library to interface with <https://podman.io/ podman>.
    .
    Read the "Podman.Tutorial" for a detailed tutorial.
    .
    @podman@ is designed to be beginner-friendly. For compat API, use the
    <https://hackage.haskell.org/package/docker docker> client instead.
    .
homepage:            https://github.com/softwarefactory-project/podman-haskell#readme
bug-reports:         https://github.com/softwarefactory-project/podman-haskell/issues
license:             Apache-2.0
license-file:        LICENSE
author:              Tristan de Cacqueray
maintainer:          tdecacqu@redhat.com
copyright:           2021 Red Hat
category:            System
build-type:          Simple
extra-doc-files:     CHANGELOG.md
                     README.md
extra-source-files:  test/data/*
tested-with:         GHC == 8.10.3

source-repository head
  type:                git
  location:            https://github.com/softwarefactory-project/podman-haskell.git

common common-options
  build-depends:       base                   < 5
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wunused-imports
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010

library
  import:              common-options
  build-depends:       aeson                  >= 1.0.0.0  && < 1.6
                     , binary                 < 0.9
                     , bytestring             < 0.12
                     , containers             < 0.7
                     , http-client            >= 0.5.0    && < 0.8
                     , http-client-tls        >= 0.2.0    && < 0.4
                     , http-types             < 0.13
                     , linux-capabilities     < 0.2
                     , network                < 4
                     , tar                    < 0.6
                     , text                   >= 0.11.1.0 && < 1.3
                     , time                   < 1.12
  hs-source-dirs:      src
  exposed-modules:     Podman
                     , Podman.Internal
                     , Podman.Tutorial
                     , Podman.Types
  other-modules:       Podman.Api
                     , Podman.Client

test-suite podman-haskell-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       aeson                  >= 1.0.0.0  && < 1.6
                     , bytestring             < 0.12
                     , podman
                     , tasty                  >= 0.11.2   && < 1.5
                     , tasty-hunit            >= 0.10     && < 0.11
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
