cabal-version:       2.4
name:                codegen
synopsis:            A tool to generate haskell types from swagger file
version:             0.0.0.0
license:             Apache-2.0
category:            System
build-type:          Simple
tested-with:         GHC == 8.10.3

executable podman-codegen
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wunused-imports
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages
  default-language:    Haskell2010

  build-depends:       base                      < 5
                     , aeson                     >= 1.0.0.0  && < 1.6
                     , insert-ordered-containers
                     , mtl
                     , swagger2
                     , text                      >= 0.11.1.0 && < 1.3
                     , yaml
  main-is:             Codegen.hs
